src/test/deca/context/invalid/declField-invalidInitialization.deca
class A {
    int a = true;
}